--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "eslint-config-dicodingacademy": "^0.9.4",
     "globals": "^15.14.0",
     "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^21.3.12",
+    "nanoid": "^3.3.8"
   }
 }
